// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrintOnly /> can render HTML content 1`] = `
<div
  aria-hidden="true"
  className="hw-print-only PrintOnly"
>
  <div>
    Test Message
  </div>
</div>
`;

exports[`<PrintOnly /> renders correctly 1`] = `
<div
  aria-hidden="true"
  className="hw-print-only PrintOnly"
>
  Test Message
</div>
`;
